Minor HTML improvements

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,13 +84,13 @@
                     </div>
                     <div class="mb-3 form-check">
                         <input class="form-check-input" id="allow-advertising" name="allow-advertising" type="checkbox">
-                        <label class="form-check-label" for="allow-advertising">I agree to receive advertising
-                            material</label>
+                        <label class="form-check-label" for="allow-advertising">I consent to receiving promotional
+                            content.</label>
                     </div>
                     <div class="mb-3">
                         <label for="message-2"></label>
                         <textarea class="form-control" id="message-2" name="message"
-                                  placeholder="Describe the services you need (e.g., windshield repair, etc.)"></textarea>
+                                  placeholder="Describe the services you need (e.g. windshield repair, etc.)"></textarea>
                     </div>
                     <!-- reCAPTCHA widget -->
                     <div class="mb-3">
