--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,26 @@
             "url": "https://chippedoutglass.com"
         }
     </script>
+    <!-- reCAPTCHA site key -->
     <script src="https://www.google.com/recaptcha/api.js?render={{ site_key }}"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11366638872"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'AW-11366638872');
+    </script>
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-    <!--<link href="{{ url_for('static', filename='css/glass.css') }}" rel="stylesheet">-->
     <link href="{{ url_for('static', filename='css/animate.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='fonts/fontawesome-all.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='img/chipped-out-auto-glass.webp') }}" rel="stylesheet">
+</head>
 <body>
 {% with messages = get_flashed_messages(with_categories=true) %}
 {% if messages %}
@@ -41,19 +54,6 @@
 <div id="brokenGlassContainer">
     <canvas id="brokenGlassCanvas"></canvas>
 </div>
-<!--
-<div class="wrapper">
-    <div class="drawing ui-corner-all animated">
-       <canvas id="draw-refract"></canvas>
-       <canvas id="draw-reflect"></canvas>
-       <canvas id="draw-fractures"></canvas>
-       <canvas id="draw-mainline"></canvas>
-       <canvas id="draw-noise"></canvas>
-       <canvas id="draw-debug" style="display: none;"></canvas>
-  </div>
-  <div class="btn"><a href="#">Clear the canvas</a></div>
-</div>
--->
 <div class="modal fade" id="contact" role="dialog" tabindex="-1">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -418,7 +418,6 @@
 <a href="#" id="scroll-to-top" title="Scroll to top"><i class="fas fa-angle-up"></i></a>
 <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bs-init.js') }}"></script>
-<!--<script src="{{ url_for('static', filename='js/glass.js') }}"></script>-->
 <script src="{{ url_for('static', filename='js/flash-message.js') }}"></script>
 <script src="{{ url_for('static', filename='js/broken-glass.js') }}"></script>
 <script src="{{ url_for('static', filename='js/scroll-to-top.js') }}"></script>
